
INCLUDE_DIRECTORIES("${SMLLIB_INCLUDE_DIR}")

ADD_LIBRARY(sml smllib_encode.c smllib_parse.c smllib_tools.c)

ADD_EXECUTABLE(Test_PublicOpen_Req test_publicopen_req.c smllib_test.c)
ADD_EXECUTABLE(Test_PublicOpen_Res test_publicopen_res.c smllib_test.c)
ADD_EXECUTABLE(Test_PublicClose_Req test_publicclose_req.c smllib_test.c)
ADD_EXECUTABLE(Test_PublicClose_Res test_publicclose_res.c smllib_test.c)
ADD_EXECUTABLE(Test_GetList_Req test_getlist_req.c smllib_test.c)
ADD_EXECUTABLE(Test_GetList_Res test_getlist_res.c smllib_test.c)
ADD_EXECUTABLE(Test_GetProfileList_Req test_getprofilelist_req.c smllib_test.c)
ADD_EXECUTABLE(Test_GetProfileList_Res test_getprofilelist_res.c smllib_test.c)
ADD_EXECUTABLE(Test_GetProfilePack_Req test_getprofilepack_req.c smllib_test.c)
ADD_EXECUTABLE(Test_GetProfilePack_Res test_getprofilepack_res.c smllib_test.c)
ADD_EXECUTABLE(Test_GetProcParameter_Req test_getprocparameter_req.c smllib_test.c)
ADD_EXECUTABLE(Test_GetProcParameter_Res test_getprocparameter_res.c smllib_test.c)
ADD_EXECUTABLE(Test_SetProcParameter_Req test_setprocparameter_req.c smllib_test.c)
ADD_EXECUTABLE(Test_Attention_Res test_attention_res.c smllib_test.c)
ADD_EXECUTABLE(Test_SML_File test_sml_file.c smllib_test.c)
ADD_EXECUTABLE(Test_SML_Transport_Msg test_sml_transport_msg.c smllib_test.c)
ADD_EXECUTABLE(Test_SML_Transport_File test_sml_transport_file.c smllib_test.c)

TARGET_LINK_LIBRARIES(Test_PublicOpen_Req sml)
TARGET_LINK_LIBRARIES(Test_PublicOpen_Res sml)
TARGET_LINK_LIBRARIES(Test_PublicClose_Req sml)
TARGET_LINK_LIBRARIES(Test_PublicClose_Res sml)
TARGET_LINK_LIBRARIES(Test_GetList_Req sml)
TARGET_LINK_LIBRARIES(Test_GetList_Res sml)
TARGET_LINK_LIBRARIES(Test_GetProfileList_Req sml)
TARGET_LINK_LIBRARIES(Test_GetProfileList_Res sml)
TARGET_LINK_LIBRARIES(Test_GetProfilePack_Req sml)
TARGET_LINK_LIBRARIES(Test_GetProfilePack_Res sml)
TARGET_LINK_LIBRARIES(Test_GetProcParameter_Req sml)
TARGET_LINK_LIBRARIES(Test_GetProcParameter_Res sml)
TARGET_LINK_LIBRARIES(Test_SetProcParameter_Req sml)
TARGET_LINK_LIBRARIES(Test_Attention_Res sml)
TARGET_LINK_LIBRARIES(Test_SML_File sml)
TARGET_LINK_LIBRARIES(Test_SML_Transport_Msg sml)
TARGET_LINK_LIBRARIES(Test_SML_Transport_File sml)

ADD_TEST(Test_PublicOpen_Req "${PROJECT_BINARY_DIR}/bin/Test_PublicOpen_Req")
ADD_TEST(Test_PublicOpen_Res "${PROJECT_BINARY_DIR}/bin/Test_PublicOpen_Res")
ADD_TEST(Test_PublicClose_Req "${PROJECT_BINARY_DIR}/bin/Test_PublicClose_Req")
ADD_TEST(Test_PublicClose_Res "${PROJECT_BINARY_DIR}/bin/Test_PublicClose_Res")
ADD_TEST(Test_GetList_Req "${PROJECT_BINARY_DIR}/bin/Test_GetList_Req")
ADD_TEST(Test_GetList_Res "${PROJECT_BINARY_DIR}/bin/Test_GetList_Res")
ADD_TEST(Test_GetProfileList_Req "${PROJECT_BINARY_DIR}/bin/Test_GetProfileList_Req")
ADD_TEST(Test_GetProfileList_Res "${PROJECT_BINARY_DIR}/bin/Test_GetProfileList_Res")
ADD_TEST(Test_GetProfilePack_Req "${PROJECT_BINARY_DIR}/bin/Test_GetProfilePack_Req")
ADD_TEST(Test_GetProfilePack_Res "${PROJECT_BINARY_DIR}/bin/Test_GetProfilePack_Res")
ADD_TEST(Test_GetProcParameter_Req "${PROJECT_BINARY_DIR}/bin/Test_GetProcParameter_Req")
ADD_TEST(Test_GetProcParameter_Res "${PROJECT_BINARY_DIR}/bin/Test_GetProcParameter_Res")
ADD_TEST(Test_SetProcParameter_Req "${PROJECT_BINARY_DIR}/bin/Test_SetProcParameter_Req")
ADD_TEST(Test_Attention_Res "${PROJECT_BINARY_DIR}/bin/Test_Attention_Res")
ADD_TEST(Test_SML_File "${PROJECT_BINARY_DIR}/bin/Test_SML_File")
ADD_TEST(Test_SML_Transport_Msg "${PROJECT_BINARY_DIR}/bin/Test_SML_Transport_Msg")
ADD_TEST(Test_SML_Transport_File "${PROJECT_BINARY_DIR}/bin/Test_SML_Transport_File")
